fix: no-columns img size on mobile

--- a/project-management-app/src/app/board/board.component.scss
+++ b/project-management-app/src/app/board/board.component.scss
@@ -70,5 +70,10 @@
     height: 50vh;
     width: 30%;
     transform: translateX(10%);
+
+    @media (max-width: 35rem) {
+      height: 35vh;
+      width: 50%;
+    }
   }
 }
